Fix overflow not being hidden on Safari

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -18,11 +18,12 @@ body {
 body, .main-body {
 	width: 100%;
 	max-width: 100vw;
+	position: relative;
+	overflow-x: hidden;
 	margin: 0;
 	color: var(--text);
 	justify-content: center;
 	font-family: Poppins, Arial, Helvetica, sans-serif;
-	overflow-x: hidden;
 }
 
 .animateDot {
